--- a/PSD-Web/PSD-Challenge/index.html
+++ b/PSD-Web/PSD-Challenge/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 <div class='wrapper'>
+
+<!--     Header Section -->
     <header>
         <h1><span class='h1-title'>Rogue</span> Pickings</h1>
         <nav>
@@ -23,6 +25,8 @@
             </ul>
         </nav>
     </header>
+
+<!-- Top Section -->
     <div class='main-section'>
         <div class='hero-image'>
             <img src='image/hero_image.jpg'/>
@@ -32,6 +36,8 @@
             <p>Welcome to Rogue Pickings, the roaming truck bringing you the freshest ingredients and ideas in food. Our team works hard so you can be sure our ingredients are always fresh and picked carefully. Our menu changes every day and is made with you in mind. We can't wait to come to you! Check out our locations to see where you can find us.</p>
         </div>
     </section>
+
+<!-- Body Section -->
     <div class='content-section'>
         <div class='content' id='border-one'>
             <div class='content-copy'>
@@ -58,6 +64,8 @@
             </div>
         </div>
     </div>
+
+<!-- Footer -->
     <footer>
         <h4>Powered by lots of <span class='script'>fresh</span> ingredients</h4>
     </footer>
